feat: Invalid id styling and displaying on render

--- a/styles/script.css
+++ b/styles/script.css
@@ -55,5 +55,14 @@
 }
 
 .script .invalid::after {
+	display: inline-block;
+
 	content: 'Invalid ID';
+	background-color: red;
+	border: white;
+	color: white;
+
+	padding-left: 10px;
+	padding-right: 10px;
+    margin-left: 10px;
 }
