--- a/styles/script.css
+++ b/styles/script.css
@@ -7,11 +7,11 @@
 	text-transform: uppercase;
 	text-align: center;
 	margin-bottom: 0px;
-	margin-left: 10%;
-	margin-right: 10%;
+	margin-left: 20%;
+	margin-right: 20%;
 }
 
-.script .line {
+.script .paragraph {
 	margin-top: 0px;
 	margin-left: 20%;
 	margin-right: 20%;
