--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
+
 body {
 	margin: 0px;
 }
@@ -15,40 +17,40 @@ body {
 	z-index: 1;
 	top: 0;
 	overflow-x: hidden;
-  }
-  
-  .left {
+}
+
+.left {
 	left: 0;
-    overflow: scroll;
+	overflow: scroll;
 
 	background-color: #222;
 	background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
 	background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
-	
+
 	background-image: -webkit-linear-gradient(white 2px, transparent 2px),
-                  -webkit-linear-gradient(0, white 2px, transparent 2px),
-                  -webkit-linear-gradient(rgba(255,255,255,.3) 1px, transparent 1px),
-                  -webkit-linear-gradient(0, rgba(255,255,255,.3) 1px, transparent 1px);
-	
-				  background-image: -moz-linear-gradient(white 2px, transparent 2px),
-                  -moz-linear-gradient(0, white 2px, transparent 2px),
-                  -moz-linear-gradient(rgba(255,255,255,.3) 1px, transparent 1px),
-                  -moz-linear-gradient(0, rgba(255,255,255,.3) 1px, transparent 1px);
+		-webkit-linear-gradient(0, white 2px, transparent 2px),
+		-webkit-linear-gradient(rgba(255, 255, 255, .3) 1px, transparent 1px),
+		-webkit-linear-gradient(0, rgba(255, 255, 255, .3) 1px, transparent 1px);
+
+	background-image: -moz-linear-gradient(white 2px, transparent 2px),
+		-moz-linear-gradient(0, white 2px, transparent 2px),
+		-moz-linear-gradient(rgba(255, 255, 255, .3) 1px, transparent 1px),
+		-moz-linear-gradient(0, rgba(255, 255, 255, .3) 1px, transparent 1px);
 
 	background-image: linear-gradient(#555 1px, transparent 1px),
-                  linear-gradient(90deg, #555 1px, transparent 1px),
-                  linear-gradient(rgba(255,255,255,.1) 1px, transparent 1px),
-                  linear-gradient(90deg, rgba(255,255,255,.1) 1px, transparent 1px);
+		linear-gradient(90deg, #555 1px, transparent 1px),
+		linear-gradient(rgba(255, 255, 255, .1) 1px, transparent 1px),
+		linear-gradient(90deg, rgba(255, 255, 255, .1) 1px, transparent 1px);
 
-  }
-  
-  .right {
+}
+
+.right {
 	right: 0;
 	background-color: #eee;
-    overflow: scroll;
-  }
+	overflow: scroll;
+}
 
-  .splitter {
+.splitter {
 	z-index: 2;
 	position: fixed;
 	height: 100%;
@@ -57,19 +59,113 @@ body {
 	width: 4px;
 	background-color: #fff;
 	user-select: none;
-  }
-  
-  /* If you want the content centered horizontally and vertically */
-  .centered {
+}
+
+/* Context menu */
+
+.context-menu {
+	font-family: 'Ubuntu Mono', monospace;
+	color: #eee;
+	font-size: small;
+
+	display: block;
+	position: absolute;
+	z-index: 10;
+
+	padding: 10px 5px;
+	width: 140px;
+	
+	background-color: #222d;
+	backdrop-filter: blur(20px);
+	box-shadow: 2px 2px 10px #111;
+	
+	border: solid 1px #444;
+	border-radius: 5px;
+	border-top-left-radius: 0px;
+}
+
+.context-menu.hidden {
+	display: none;
+}
+
+.context-items {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.context-color-palette {
+	display: block;
+	justify-content: center;
+	padding: 5px 10px;
+}
+
+.context-color-button {
+	display: inline-block;
+
+	border-radius: 100%;
+    border: solid 1px #eee5;
+	height: 15px;
+	width: 15px;
+	margin: 3px;
+
+	cursor: pointer;
+}
+
+.context-color-button:hover {
+	border: solid 1px #eee;
+}
+
+.context-id {
+	display: block;
+	
+	font-weight: bold;
+	font-size: medium;
+	text-align: center;
+	text-decoration: none;
+	
+	padding-bottom: 10px;
+	margin-bottom: 5px;
+	margin-left: 10px;
+	margin-right: 10px;
+
+	border-bottom: solid 1px #eee4;
+}
+
+.context-item {
+	display: block;
+	padding: 5px 10px;
+	color: #eee;
+	text-decoration: none;
+	border-radius: 2px;
+}
+
+.context-item:hover {
+	color: #fff;
+	cursor: pointer;
+  	background-color: #eee4;
+}
+
+.context-item.danger:hover {
+	background-color: #f888;
+}
+
+.context-item:last-child {
+	margin-bottom: 0;
+}
+
+
+/* If you want the content centered horizontally and vertically */
+.centered {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	text-align: center;
-  }
-  
-  /* Style the image inside the centered container, if needed */
-  .centered img {
+}
+
+/* Style the image inside the centered container, if needed */
+.centered img {
 	width: 150px;
 	border-radius: 50%;
-  }
+}
