--- a/styles/style.css
+++ b/styles/style.css
@@ -73,7 +73,7 @@ body {
 	z-index: 10;
 
 	padding: 10px 5px;
-	width: 140px;
+	width: 180px;
 	
 	background-color: #222d;
 	box-shadow: 2px 2px 10px #111;
@@ -95,7 +95,7 @@ body {
 
 .context-color-palette {
 	display: block;
-	justify-content: center;
+	text-align: center;
 	padding: 5px 10px;
 }
 
@@ -137,6 +137,19 @@ body {
 	color: #eee;
 	text-decoration: none;
 	border-radius: 2px;
+}
+
+.context-item.hidden {
+	display: none;
+}
+
+.context-item.resolve {
+	background-color: red;
+}
+
+.context-item.separated {
+	margin-bottom: 7px;
+	border-bottom: solid 1px #eee4;
 }
 
 .context-item:hover {
