--- a/styles/script.css
+++ b/styles/script.css
@@ -1,6 +1,9 @@
 .script {
 	font-family: 'Courier New', monospace;
 	font-size: 12pt;
+
+	--panel-width : 50%;
+	--panel-offset : 50%;
 }
 
 .script .character {
@@ -83,13 +86,14 @@
 
 .script .action {
 	position: fixed;
-	width: 100%;
+	width: var(--panel-width);
+	left: var(--panel-offset);
 	bottom: 0;
 
-	background-color: #222;
+	background-color: black;
 	color: white;
 
-	padding: 10px;
+	padding: 10px 20px 10px 20px;
 
 	display: flex;
 	flex-wrap: nowrap;
