--- a/styles/table.css
+++ b/styles/table.css
@@ -1,17 +1,8 @@
 .chapter-table {
-	font-family: 'Ubuntu Mono', monospace;
+	font-family: 'Courier New', monospace;
 	border-collapse: collapse;
 	table-layout: fixed;
 	width: 100%;
-}
-
-.chapter-table caption {
-	text-align: left;
-	background-color: #222;
-	color: var(--color);
-	/* border: 2px solid var(--color); */
-	font-weight: bold;
-	padding: 8px;
 }
   
 .chapter-table td, .chapter-table th {	
@@ -27,7 +18,8 @@
   
 .chapter-table th {
 	text-align: center;
-	background-color: #222;
+	background-color: #151515;
+	font-weight: normal;
 	color: white;
 }
 
