--- a/styles/style.css
+++ b/styles/style.css
@@ -72,12 +72,12 @@ body {
 	padding: 10px 5px;
 	width: 180px;
 	
+	backdrop-filter: blur(3px);
 	background-color: #222d;
-	box-shadow: 2px 2px 10px #111;
 	
-	border: solid 1px #444;
+	box-shadow: 2px 2px 10px #1115;
+	border: solid 1px #eee4;
 	border-radius: 5px;
-	border-top-left-radius: 0px;
 }
 
 .context-menu.hidden {
@@ -163,8 +163,43 @@ body {
 	background-color: #f888;
 }
 
+.context-item.blocked {
+	color: rgba(238, 238, 238, 0.334);
+}
+
+.context-item.blocked:hover {
+	background-color: rgba(238, 238, 238, 0.152);
+}
+
 .context-item:last-child {
 	margin-bottom: 0;
+}
+
+.add-column-container {
+	display: flex;
+	justify-content: space-between;
+	align-items: baseline;
+	
+	padding-inline: 10px;
+	color: #eee;
+	text-decoration: none;
+	border-radius: 2px;
+}
+
+.add-column-container>* {
+	padding-block: 5px;
+	border-radius: 2px;
+}
+
+.add-column-container .button {
+	width: 20%;
+	font-weight: 900;
+}
+
+.add-column-container .button:hover {
+	color: #fff;
+	cursor: pointer;
+  	background-color: #eee4;
 }
 
 /* If you want the content centered horizontally and vertically */
